Fix avatar alignment

--- a/src/js/app/components/PortraidCard/PortraitCard.scss
+++ b/src/js/app/components/PortraidCard/PortraitCard.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   margin: 8px 16px;
+  text-align: center;
 }
 
 .name {
